--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">android-mvvm-compose</string>
+    <string name="error_title">Ooops!</string>
+    <string name="error_message">There was an error.</string>
+    <string name="error_try_again">Try again</string>
 </resources>
